--- a/FreeTheForest/Packages/manifest.json
+++ b/FreeTheForest/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.nobi.roundedcorners": "https://github.com/kirevdokimov/Unity-UI-Rounded-Corners.git",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
